let build.xml retrieve the path to Scala from the SCALA_HOME environment variable for portability
git-svn-id: https://javamop.googlecode.com/svn/trunk@7 3664526f-1af9-0fc8-7c89-f5c43c22a1f7

--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,8 @@
    <property name="lib" value="lib" />
    <property name="plugins" value="lib/plugins" />
    <property name="src" value="src" />
-   <property name="scala.home" value="/usr/local/scala" />
+   <property environment="env"/>
+   <property name="scala.home" value="${env.SCALA_HOME}" />
    <property name="scala-compiler.jar" value="${scala.home}/lib/scala-compiler.jar" />
    <property name="scala-library.jar" value="${scala.home}/lib/scala-library.jar" />
    <path id="scala.classpath">
@@ -22,7 +23,7 @@
    <property name="javamop" value="javamop" />
    <property name="lr" value="logicrepository" />
    <property name="test" value="javamoptestsuite" />
-	<property name="javamoprt" value="javamoprt" />
+   <property name="javamoprt" value="javamoprt" />
 
    <target name="init">
      <mkdir dir="${build}"/>
