build.xml currently wrong, will fix later
git-svn-id: https://javamop.googlecode.com/svn/trunk@171 3664526f-1af9-0fc8-7c89-f5c43c22a1f7

--- a/build.xml
+++ b/build.xml
@@ -47,9 +47,9 @@
 		<javac srcdir="${src}" destdir="${build}" debug="off" optimize="on">
 			<exclude name="**/PTLTLPlugin.java" />
 		</javac>
-    <scalac srcdir="${src}" destdir="${build}" classpathref="scala.classpath" force="changed">
+    <!--<scalac srcdir="${src}" destdir="${build}" classpathref="scala.classpath" force="changed">
 			<include name="**/*.scala" />
-    </scalac>
+    </scalac> -->
 		<!-- ugly hack -->
 		<javac srcdir="${src}" destdir="${build}" debug="off" optimize="on">
 			<include name="**/PTLTLPlugin.java" />
