--- a/build.xml
+++ b/build.xml
@@ -45,14 +45,14 @@
         </target>
 
         <target name="compile" depends="init">
-                <javac srcdir="${src}" destdir="${build}" debug="off" optimize="on">
+                <javac srcdir="${src}" destdir="${build}" debug="off" optimize="on" includeantruntime="false">
                         <exclude name="**/PTLTLPlugin.java" />
                 </javac>
-    <scalac srcdir="${src}" destdir="${build}" classpathref="scala.classpath" deprecation="yes" force="changed">
+                <!--<scalac srcdir="${src}" destdir="${build}" classpathref="scala.classpath" deprecation="yes" force="false">
                         <include name="**/*.scala" />
-    </scalac> 
+    </scalac> -->
                 <!-- ugly hack -->
-                <javac srcdir="${src}" destdir="${build}" debug="off" optimize="on">
+                <javac srcdir="${src}" destdir="${build}" debug="off" optimize="on" includeantruntime="false">
                         <include name="**/PTLTLPlugin.java" />
                 </javac>
 
