curse you scalac
git-svn-id: https://javamop.googlecode.com/svn/trunk@197 3664526f-1af9-0fc8-7c89-f5c43c22a1f7

--- a/build.xml
+++ b/build.xml
@@ -48,9 +48,9 @@
                 <javac srcdir="${src}" destdir="${build}" debug="off" optimize="on" includeantruntime="false">
                         <exclude name="**/PTLTLPlugin.java" />
                 </javac>
-                <!--<scalac srcdir="${src}" destdir="${build}" classpathref="scala.classpath" deprecation="yes" force="false">
+                <scalac srcdir="${src}" destdir="${build}" classpathref="scala.classpath" deprecation="yes" force="false">
                         <include name="**/*.scala" />
-    </scalac> -->
+                </scalac> 
                 <!-- ugly hack -->
                 <javac srcdir="${src}" destdir="${build}" debug="off" optimize="on" includeantruntime="false">
                         <include name="**/PTLTLPlugin.java" />
