add compilation of PO.jar
git-svn-id: https://javamop.googlecode.com/svn/trunk@210 3664526f-1af9-0fc8-7c89-f5c43c22a1f7

--- a/build.xml
+++ b/build.xml
@@ -83,6 +83,7 @@
                 <jar destfile="${plugins}/PTCARET.jar" basedir="${build}" includes="${lr}/plugins/ptcaret/**" />
                 <jar destfile="${plugins}/PDA.jar" basedir="${build}" includes="${lr}/plugins/pda/**" />
                 <jar destfile="${plugins}/SRS.jar" basedir="${build}" includes="${lr}/plugins/srs/**" />
+                <jar destfile="${plugins}/PO.jar" basedir="${build}" includes="${lr}/plugins/po/**" />
         </target>
 
         <!---   
