--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,18 @@
             <artifactId>rv-monitor</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- A runtime dependency, as JavaMOP uses AspectJ to compile agents. -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjtools</artifactId>
+            <version>1.8.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -45,7 +57,7 @@
                 <version>3.1</version>
                 <executions>
                     <execution>
-                        <id>compile</id>
+                        <id>default-compile</id>
                         <goals>
                             <goal>compile</goal>
                         </goals>
@@ -54,7 +66,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>testCompile</id>
+                        <id>default=testCompile</id>
                         <goals>
                             <goal>testCompile</goal>
                         </goals>
@@ -63,6 +75,31 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <formats>
+                                <format>dir</format>
+                            </formats>
+                            <finalName>javamop</finalName>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <outputDirectory>release</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
             </plugin>
         </plugins>
     </build>
