--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,22 @@
     <scm>
         <connection>scm:git:https://github.com/runtimeverification/rv-monitor.git</connection>
     </scm>
+    <repositories>
+        <repository>
+            <id>runtime-verification</id>
+            <name>Runtime Verification Repository</name>
+            <url>http://office.runtimeverification.com:8888/repository/internal</url>
+            <snapshots><enabled>false</enabled></snapshots>
+            <releases><enabled>true</enabled></releases>
+        </repository>
+        <repository>
+            <id>runtime-verification.snapshots</id>
+            <name>Runtime Verification Snapshot Repository</name>
+            <url>http://office.runtimeverification.com:8888/repository/snapshots</url>
+            <snapshots><enabled>true</enabled></snapshots>
+            <releases><enabled>false</enabled></releases>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
