--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
                             </formats>
                             <finalName>javamop</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
-                            <outputDirectory>release</outputDirectory>
+                            <outputDirectory>${project.build.directory}/release</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -110,6 +110,66 @@
                         <goals>
                             <goal>integration-test</goal>
                             <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Install project jars before generating the izpack install jar. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.3.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.runtimeverification.install</groupId>
+                                    <artifactId>rv-install</artifactId>
+                                    <version>0.2</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/release/javamop/</outputDirectory>
+                                    <includes>res/**</includes>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.izpack</groupId>
+                <artifactId>izpack-maven-plugin</artifactId>
+                <version>5.0.0-rc2</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <baseDir>${project.build.directory}/release/javamop</baseDir>
+                    <installFile>src/main/izpack/install.xml</installFile>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <finalName>installer-${project.build.finalName}</finalName>
+                    <enableOverrideArtifact>true</enableOverrideArtifact>
+                    <mkdirs>true</mkdirs>
+                    <autoIncludeUrl>false</autoIncludeUrl>
+                    <autoIncludeDevelopers>false</autoIncludeDevelopers>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>izpack</goal>
                         </goals>
                     </execution>
                 </executions>
