check that property-db is to be used only with agent generation

--- a/config/remote_server_addr.properties
+++ b/config/remote_server_addr.properties
@@ -1,3 +1,9 @@
 # Specify the logic repository server address.
 # This address will be used when having -remote option.
 ServerAddr = http://fsl.cs.uiuc.edu/jsps/logic-2.2.php
+
+# The URL from which properties are to be downloaded
+PropertyDBURL = https://code.google.com/p/annotated-java-api/
+
+# The VCS system used in the property DB (temporary, until we switch permanently to git)
+PropertDBVCS = hg
