skeleton code and config files for filtering and omitting properties files

--- a/config/remote_server_addr.properties
+++ b/config/remote_server_addr.properties
@@ -7,3 +7,9 @@ PropertyDBURL = https://code.google.com/p/annotated-java-api/
 
 # The VCS system used in the property DB (temporary, until we switch permanently to git)
 PropertDBVCS = hg
+
+# Name of the config file to be used for filtering
+FilterConf = mop.conf
+
+# Name of file for specifying properties to be omitted from agent generation, even after filtering
+OmitFile = omit.text
