--- a/config/remote_server_addr.properties
+++ b/config/remote_server_addr.properties
@@ -6,7 +6,7 @@ ServerAddr = http://fsl.cs.uiuc.edu/jsps/logic-2.2.php
 PropertyDBURL = https://code.google.com/p/annotated-java-api/
 
 # The VCS system used in the property DB (temporary, until we switch permanently to git)
-PropertDBVCS = hg
+PropertyDBVCS = hg
 
 # Name of the config file to be used for filtering
 FilterConf = mop.conf
