adding the names of two config files to the main config file

--- a/config/remote_server_addr.properties
+++ b/config/remote_server_addr.properties
@@ -9,7 +9,7 @@ PropertyDBURL = https://code.google.com/p/annotated-java-api/
 PropertyDBVCS = hg
 
 # Name of the config file to be used for filtering
-FilterConf = mop.conf
+FilterConf = spec_levels.properties
 
 # Name of file for specifying properties to be omitted from agent generation, even after filtering
-OmitFile = omit.text
+OmitFile = omit.txt
