--- a/config/remote_server_addr.properties
+++ b/config/remote_server_addr.properties
@@ -8,6 +8,9 @@ PropertyDBURL = https://code.google.com/p/annotated-java-api/
 # The VCS system used in the property DB (temporary, until we switch permanently to git)
 PropertyDBVCS = hg
 
+# Whether or not to cleanup after generating agent from property-db
+PropertyDBCleanup = true
+
 # Name of the config file to be used for filtering
 FilterConf = spec_levels.properties
 
