--- a/config/remote_server_addr.properties
+++ b/config/remote_server_addr.properties
@@ -9,7 +9,7 @@ PropertyDBURL = https://code.google.com/p/annotated-java-api/
 PropertyDBVCS = hg
 
 # Whether or not to cleanup after generating agent from property-db
-PropertyDBCleanup = true
+PropertyDBCleanup = false
 
 # Name of the config file to be used for filtering
 FilterConf = spec_levels.properties
