--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,16 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.35</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
