--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <version>1.8.1</version>
         </dependency>
         <dependency>
+	    <groupId>org.aspectj</groupId>
+	    <artifactId>aspectjrt</artifactId>
+	    <version>1.8.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
