changing the URL in the config

--- a/config/remote_server_addr.properties
+++ b/config/remote_server_addr.properties
@@ -3,10 +3,7 @@
 ServerAddr = http://fsl.cs.uiuc.edu/jsps/logic-2.2.php
 
 # The URL from which properties are to be downloaded
-PropertyDBURL = https://code.google.com/p/annotated-java-api/
-
-# The VCS system used in the property DB (temporary, until we switch permanently to git)
-PropertyDBVCS = hg
+PropertyDBURL = https://github.com/runtimeverification/property-db.git
 
 # Whether or not to cleanup after generating agent from property-db
 PropertyDBCleanup = false
@@ -14,5 +11,6 @@ PropertyDBCleanup = false
 # Name of the config file to be used for filtering
 FilterConf = spec_levels.properties
 
-# Name of file for specifying properties to be omitted from agent generation, even after filtering
+# Name of file for specifying properties to be omitted from agent
+# generation, even after filtering
 OmitFile = omit.txt
