fix a bug when running mvn install

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
                         </goals>
                         <configuration>
                             <formats>
+                                <format>dir</format>
                                 <format>tar.gz</format>
                                 <format>zip</format>
                             </formats>
