--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
                         <id>integration-test-report</id>
                         <phase>post-integration-test</phase>
                         <goals>
-                            <goal>report</goal>
+                            <goal>report-integration</goal>
                         </goals>
                     </execution>
                 </executions>
