--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <testOutDir>${project.build.testOutputDirectory}</testOutDir>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
        </plugins>
     </build>
 </project>
