Update pom.xml to deploy to aws s3

--- a/pom.xml
+++ b/pom.xml
@@ -12,30 +12,30 @@
     </scm>
     <repositories>
         <repository>
-            <id>runtime-verification</id>
+            <id>runtime.verification</id>
             <name>Runtime Verification Repository</name>
-            <url>http://office.runtimeverification.com:8888/repository/internal</url>
+            <url>https://s3.amazonaws.com/repo.runtime.verification/repository/internal</url>
             <snapshots><enabled>false</enabled></snapshots>
             <releases><enabled>true</enabled></releases>
         </repository>
         <repository>
-            <id>runtime-verification.snapshots</id>
+            <id>runtime.verification.snapshots</id>
             <name>Runtime Verification Snapshot Repository</name>
-            <url>http://office.runtimeverification.com:8888/repository/snapshots</url>
+            <url>https://s3.amazonaws.com/repo.runtime.verification/repository/snapshots</url>
             <snapshots><enabled>true</enabled></snapshots>
             <releases><enabled>false</enabled></releases>
         </repository>
     </repositories>
     <distributionManagement>
         <repository>
-            <id>runtime-verification</id>
+            <id>runtime.verification</id>
             <name>JavaMop Repository</name>
-            <url>http://office.runtimeverification.com:8888/repository/internal</url>
+            <url>s3://repo.runtime.verification/repository/internal</url>
        </repository>
        <snapshotRepository>
-            <id>runtime-verification.snapshots</id>
+            <id>runtime.verification.snapshots</id>
             <name>JavaMop Snapshot Repository</name>
-            <url>http://office.runtimeverification.com:8888/repository/snapshots</url>
+            <url>s3://repo.runtime.verification/repository/snapshots</url>
        </snapshotRepository>
     </distributionManagement>
     <dependencies>
@@ -92,6 +92,13 @@
     </dependencies>
 
     <build>
+        <extensions>
+            <extension>
+                <groupId>org.springframework.build</groupId>
+                <artifactId>aws-maven</artifactId>
+                <version>5.0.0.RELEASE</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
