--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,16 @@
     </scm>
     <repositories>
         <repository>
-            <id>runtime.verification</id>
+            <id>runtime-verification</id>
             <name>Runtime Verification Repository</name>
-            <url>https://s3.amazonaws.com/repo.runtime.verification/repository/internal</url>
+            <url>http://office.runtimeverification.com:8888/repository/internal</url>
             <snapshots><enabled>false</enabled></snapshots>
             <releases><enabled>true</enabled></releases>
         </repository>
         <repository>
-            <id>runtime.verification.snapshots</id>
+            <id>runtime-verification.snapshots</id>
             <name>Runtime Verification Snapshot Repository</name>
-            <url>https://s3.amazonaws.com/repo.runtime.verification/repository/snapshots</url>
+            <url>http://office.runtimeverification.com:8888/repository/snapshots</url>
             <snapshots><enabled>true</enabled></snapshots>
             <releases><enabled>false</enabled></releases>
         </repository>
