(WIP)removed inlined javaparser code and made code depend on javaparser

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <version>1.16.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-core</artifactId>
+            <version>3.23.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
