--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
-lib/javamop.jar
-lib/javamoptestsuite.jar
-lib/log/
-test-reports/
-build/
-target/
-release/
+**/target/**
+
+*.swp
+
+.classpath
+.project
+.settings
 .idea
 *.iml
+
 *~
 *.bak
-*.rvm
 *.actual.err
 *.actual.out
+
+*.class
+*.jar
+*.rvm
+*.class
