--- a/plugins_logicrepository/tfsm/pom.xml
+++ b/plugins_logicrepository/tfsm/pom.xml
@@ -7,4 +7,12 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>tfsm</artifactId>
     <name>tfsm</name>
+    <dependencies>
+        <dependency>
+            <groupId>com.runtimeverification.rvmonitor.logicrepository.plugins</groupId>
+            <artifactId>fsm</artifactId>
+            <version>5.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
