--- a/rv-monitor-rt/pom.xml
+++ b/rv-monitor-rt/pom.xml
@@ -8,4 +8,16 @@
   <groupId>com.runtimeverification.rvmonitor</groupId>
   <artifactId>rv-monitor-rt</artifactId>
   <name>rv-monitor-rt</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
