--- a/rv-monitor-rt/pom.xml
+++ b/rv-monitor-rt/pom.xml
@@ -8,6 +8,13 @@
   <groupId>com.runtimeverification.rvmonitor</groupId>
   <artifactId>rv-monitor-rt</artifactId>
   <name>rv-monitor-rt</name>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
