--- a/rv-monitor-rt/pom.xml
+++ b/rv-monitor-rt/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
